Added an import function (turned off for now) and added option to manipulate rendering settings from data browser. Work not finished yet
git-svn-id: file:///home/svn/shoola-omero/trunk@6430 6f2cb1de-eb0d-0410-b157-e593188b5901